Fix the navigation bar spacing

--- a/src/styles/calculator.css
+++ b/src/styles/calculator.css
@@ -125,7 +125,7 @@ ul {
   list-style-type: none;
   font-size: 1.6rem;
   font-weight: bold;
-  gap: 2%;
+  gap: 15%;
 }
 
 .navbar {
